--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "dayjs": "^1.8.18",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
+    "gantt-schedule-timeline-calendar": "^1.0.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
